--- a/client/package.json
+++ b/client/package.json
@@ -4,21 +4,15 @@
     "description": "",
     "private": true,
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --config webpack.development.js",
-        "start": "webpack serve --config webpack.development.js"
+        "build": "webpack --config webpack.production.js"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "7.12.10",
         "@babel/plugin-transform-arrow-functions": "7.12.1",
-        "@babel/plugin-transform-typescript": "7.12.1",
-        "@babel/polyfill": "7.12.1",
         "@babel/preset-env": "7.12.11",
-        "@babel/preset-typescript": "7.12.7",
         "@fortawesome/fontawesome-free": "5.15.1",
-        "@types/webpack-dev-server": "3.11.1",
         "@typescript-eslint/eslint-plugin": "4.11.0",
         "@typescript-eslint/parser": "4.11.0",
         "babel-loader": "8.2.2",
@@ -36,11 +30,11 @@
         "prettier-eslint": "12.0.0",
         "sass": "1.30.0",
         "sass-loader": "10.1.0",
+        "source-map-loader": "1.1.3",
         "ts-loader": "8.0.12",
         "webpack": "5.11.0",
-        "webpack-bundle-tracker": "^1.0.0-alpha.1",
+        "webpack-bundle-tracker": "0.4.3",
         "webpack-cli": "4.2.0",
-        "webpack-dev-server": "3.11.0",
         "webpack-merge": "5.7.2"
     },
     "dependencies": {
