--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,17 +1,10 @@
 {
     "compilerOptions": {
-        "lib": ["dom", "dom.iterable"],
-        "target": "es5",
+        "sourceMap": true,
         "noImplicitAny": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
         "module": "es6",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "noEmit": false
+        "target": "es2020",
+        "strict": true,
+        "isolatedModules": true
     }
 }
