--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
         "@babel/plugin-transform-arrow-functions": "7.12.1",
         "@babel/preset-env": "7.12.11",
         "@fortawesome/fontawesome-free": "5.15.1",
+        "@types/jquery": "3.5.5",
+        "@types/select2": "4.0.53",
         "@typescript-eslint/eslint-plugin": "4.11.0",
         "@typescript-eslint/parser": "4.11.0",
         "babel-loader": "8.2.2",
@@ -30,6 +32,7 @@
         "prettier-eslint": "12.0.0",
         "sass": "1.30.0",
         "sass-loader": "10.1.0",
+        "select2": "4.0.13",
         "source-map-loader": "1.1.3",
         "ts-loader": "8.0.12",
         "webpack": "5.11.0",
