--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,6 +5,7 @@
         "module": "es6",
         "target": "es2020",
         "strict": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "moduleResolution": "node"
     }
 }
