--- a/.devcontainer/docker-compose.develop.yml
+++ b/.devcontainer/docker-compose.develop.yml
@@ -18,3 +18,6 @@ services:
 
     # Overrides default command so things don't shut down after the process ends.
     command: /bin/sh -c "while sleep 1000; do :; done"
+  db:
+    ports:
+      - 5432:5432
