--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
         "select2": "4.0.13",
         "source-map-loader": "1.1.3",
         "ts-loader": "8.0.12",
+        "url-loader": "4.1.1",
         "webpack": "5.11.0",
         "webpack-bundle-tracker": "0.4.3",
         "webpack-cli": "4.2.0",
