--- a/leaderboard/.vscode/settings.json
+++ b/leaderboard/.vscode/settings.json
@@ -5,10 +5,9 @@
   "pythonTestExplorer.testFramework": "unittest",
   // in order to disable automatic import sorting
   // "python.formatting.autopep8Args": ["--ignore", "E402"],
-  "prettier.disableLanguages": ["django-html"],
   "files.associations": {
     "**/*.html": "html",
-    "**/templates/**/*.html": "django-html",
+    "**/templates/**/*.{html,svg}": "django-html",
     "**/templates/**/*": "django-txt",
     "**/requirements{/**,*}.{txt,in}": "pip-requirements"
   },
