--- a/client/package.json
+++ b/client/package.json
@@ -1,46 +1,45 @@
 {
-    "name": "client",
-    "version": "1.0.0",
-    "description": "",
-    "private": true,
-    "scripts": {
-        "build": "webpack --config webpack.production.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@babel/core": "7.12.10",
-        "@babel/plugin-transform-arrow-functions": "7.12.1",
-        "@babel/preset-env": "7.12.11",
-        "@types/jquery": "3.5.5",
-        "@types/select2": "4.0.53",
-        "@typescript-eslint/eslint-plugin": "4.11.0",
-        "@typescript-eslint/parser": "4.11.0",
-        "babel-loader": "8.2.2",
-        "bootstrap": "4.5.3",
-        "clean-webpack-plugin": "3.0.0",
-        "css-loader": "5.0.1",
-        "eslint": "7.16.0",
-        "eslint-config-prettier": "7.1.0",
-        "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-prettier": "3.3.0",
-        "eslint-webpack-plugin": "2.4.1",
-        "jquery": "3.5.1",
-        "mini-css-extract-plugin": "1.3.3",
-        "popper.js": "1.16.1",
-        "prettier-eslint": "12.0.0",
-        "sass": "1.30.0",
-        "sass-loader": "10.1.0",
-        "select2": "4.0.13",
-        "source-map-loader": "1.1.3",
-        "ts-loader": "8.0.12",
-        "url-loader": "4.1.1",
-        "webpack": "5.11.0",
-        "webpack-bundle-tracker": "0.4.3",
-        "webpack-cli": "4.2.0",
-        "webpack-merge": "5.7.2"
-    },
-    "dependencies": {
-        "npm-check": "^5.9.2"
-    }
+  "name": "client",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "scripts": {
+    "build": "webpack --config webpack.production.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "7.12.10",
+    "@babel/plugin-transform-arrow-functions": "7.12.1",
+    "@babel/preset-env": "7.12.11",
+    "@types/jquery": "3.5.5",
+    "@types/select2": "4.0.53",
+    "@typescript-eslint/eslint-plugin": "4.11.0",
+    "@typescript-eslint/parser": "4.11.0",
+    "babel-loader": "8.2.2",
+    "bootstrap": "4.5.3",
+    "clean-webpack-plugin": "3.0.0",
+    "core-js": "3.8.2",
+    "css-loader": "5.0.1",
+    "eslint": "7.16.0",
+    "eslint-config-prettier": "7.1.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-webpack-plugin": "2.4.1",
+    "jquery": "3.5.1",
+    "mini-css-extract-plugin": "1.3.3",
+    "popper.js": "1.16.1",
+    "prettier": "2.2.1",
+    "prettier-webpack-plugin": "1.2.0",
+    "sass": "1.30.0",
+    "sass-loader": "10.1.0",
+    "select2": "4.0.13",
+    "source-map-loader": "1.1.3",
+    "ts-loader": "8.0.12",
+    "typescript": "4.1.3",
+    "url-loader": "4.1.1",
+    "webpack": "5.11.0",
+    "webpack-bundle-tracker": "0.4.3",
+    "webpack-cli": "4.2.0",
+    "webpack-merge": "5.7.2"
+  }
 }
