--- a/client/.vscode/launch.json
+++ b/client/.vscode/launch.json
@@ -1,22 +1,22 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch Client",
-            "type": "pwa-node",
-            "request": "launch",
-            "program": "${workspaceFolder}/node_modules/.bin/webpack",
-            "args": ["--config", "${workspaceFolder}/webpack.development.js"]
-        },
-        {
-            "name": "Launch Chrome",
-            "type": "pwa-chrome",
-            "request": "launch",
-            "url": "http://localhost:3000/admin/users/appuser/728/change/",
-            "webRoot": "${workspaceFolder:client}"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Launch Client",
+      "type": "pwa-node",
+      "request": "launch",
+      "program": "${workspaceFolder}/node_modules/.bin/webpack",
+      "args": ["--config", "${workspaceFolder}/webpack.development.js"]
+    },
+    {
+      "name": "Launch Chrome",
+      "type": "pwa-chrome",
+      "request": "launch",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder:client}"
+    }
+  ]
 }
